--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,27 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  #state management
+  flutter_bloc: ^8.1.2
+  equatable: ^2.0.5
+  #firebase
+  #firebase_auth: ^0.18.0+1
+  #cloud_firestore: ^0.14.0+2
+  #firebase_storage: ^4.0.0
+  #responsive_builder: ^0.3.0
+  #camera: ^0.5.8+5
+  #custom_image_picker: ^0.0.3
+  #message shape bubble
+  #bubble: ^1.1.9+1
+  country_pickers: ^2.0.0
+  #masked_text_input_formatter: ^0.0.1
+  pin_code_fields: ^7.4.0
+  get_it: ^7.2.0
+  #contacts_service: ^0.4.6
+  #font_awesome_flutter: ^8.8.1
+  #dateFormat
+ # intl: ^0.16.0
+
 
 dev_dependencies:
   flutter_test:
