"Add phone authentication method"

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,9 @@ dependencies:
   flutter_bloc: ^8.1.2
   equatable: ^2.0.5
   #firebase
-  #firebase_auth: ^0.18.0+1
-  #cloud_firestore: ^0.14.0+2
-  #firebase_storage: ^4.0.0
+  firebase_auth: ^4.4.0
+  cloud_firestore: ^4.5.0
+  firebase_storage: ^11.1.0
   #responsive_builder: ^0.3.0
   #camera: ^0.5.8+5
   #custom_image_picker: ^0.0.3
@@ -80,8 +80,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
